// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:transfer 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
        >
          <div
            class="cxd-Panel cxd-Panel--default cxd-Panel--form"
            style="position: relative;"
          >
            <div
              class="cxd-Panel-heading"
            >
              <h3
                class="cxd-Panel-title"
              >
                <span
                  class="cxd-TplField"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="cxd-Panel-body"
            >
              <form
                class="cxd-Form cxd-Form--normal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="cxd-Form-item cxd-Form-item--normal"
                  data-role="form-item"
                >
                  <label
                    class="cxd-Form-label"
                  >
                    <span>
                      <span
                        class="cxd-TplField"
                      >
                        <span>
                          默认
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="cxd-TransferControl cxd-Form-control"
                  >
                    <div
                      class="cxd-Transfer"
                    >
                      <div
                        class="cxd-Transfer-select"
                      >
                        <div
                          class="cxd-Transfer-title"
                        >
                          <span>
                            <label
                              class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full cxd-Checkbox--sm"
                            >
                              <input
                                type="checkbox"
                              />
                              <i />
                              <span
                                class=""
                              />
                            </label>
                            可选项
                            <span>
                              （
                              6
                              /
                              6
                              ）
                            </span>
                          </span>
                        </div>
                        <div
                          class="cxd-GroupedSelection cxd-Transfer-selection"
                        >
                          <div
                            class="cxd-GroupedSelection-item"
                          >
                            <label
                              class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full cxd-Checkbox--sm"
                            >
                              <input
                                type="checkbox"
                              />
                              <i />
                              <span
                                class=""
                              />
                            </label>
                            <div
                              class="cxd-GroupedSelection-itemLabel"
                            >
                              <span>
                                诸葛亮
                              </span>
                            </div>
                          </div>
                          <div
                            class="cxd-GroupedSelection-item"
                          >
                            <label
                              class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full cxd-Checkbox--sm"
                            >
                              <input
                                type="checkbox"
                              />
                              <i />
                              <span
                                class=""
                              />
                            </label>
                            <div
                              class="cxd-GroupedSelection-itemLabel"
                            >
                              <span>
                                曹操
                              </span>
                            </div>
                          </div>
                          <div
                            class="cxd-GroupedSelection-item"
                          >
                            <label
                              class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full cxd-Checkbox--sm"
                            >
                              <input
                                type="checkbox"
                              />
                              <i />
                              <span
                                class=""
                              />
                            </label>
                            <div
                              class="cxd-GroupedSelection-itemLabel"
                            >
                              <span>
                                钟无艳
                              </span>
                            </div>
                          </div>
                          <div
                            class="cxd-GroupedSelection-item"
                          >
                            <label
                              class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full cxd-Checkbox--sm"
                            >
                              <input
                                type="checkbox"
                              />
                              <i />
                              <span
                                class=""
                              />
                            </label>
                            <div
                              class="cxd-GroupedSelection-itemLabel"
                            >
                              <span>
                                李白
                              </span>
                            </div>
                          </div>
                          <div
                            class="cxd-GroupedSelection-item"
                          >
                            <label
                              class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full cxd-Checkbox--sm"
                            >
                              <input
                                type="checkbox"
                              />
                              <i />
                              <span
                                class=""
                              />
                            </label>
                            <div
                              class="cxd-GroupedSelection-itemLabel"
                            >
                              <span>
                                韩信
                              </span>
                            </div>
                          </div>
                          <div
                            class="cxd-GroupedSelection-item"
                          >
                            <label
                              class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full cxd-Checkbox--sm"
                            >
                              <input
                                type="checkbox"
                              />
                              <i />
                              <span
                                class=""
                              />
                            </label>
                            <div
                              class="cxd-GroupedSelection-itemLabel"
                            >
                              <span>
                                云中君
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="cxd-Transfer-mid"
                      />
                      <div
                        class="cxd-Transfer-result"
                      >
                        <div
                          class="cxd-Transfer-title"
                        >
                          <span>
                            已选项
                            <span>
                              （
                              0
                              ）
                            </span>
                          </span>
                          <a
                            class="cxd-Transfer-clearAll is-disabled"
                          >
                            清空
                          </a>
                        </div>
                        <div
                          class="cxd-Selections cxd-Transfer-value"
                        >
                          <div
                            class="cxd-Selections-placeholder"
                          >
                            请选择左侧数据
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="cxd-Panel-footerWrap"
            >
              <div
                class="cxd-Panel-btnToolbar cxd-Panel-footer"
              >
                <button
                  class="cxd-Button cxd-Button--primary cxd-Button--size-default"
                  type="submit"
                >
                  <span>
                    提交
                  </span>
                </button>
              </div>
            </div>
            <div
              class="resize-sensor"
              style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              
  
              <div
                class="resize-sensor-expand"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-shrink"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-appear"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:transfer chained 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
        >
          <div
            class="cxd-Panel cxd-Panel--default cxd-Panel--form"
            style="position: relative;"
          >
            <div
              class="cxd-Panel-heading"
            >
              <h3
                class="cxd-Panel-title"
              >
                <span
                  class="cxd-TplField"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="cxd-Panel-body"
            >
              <form
                class="cxd-Form cxd-Form--normal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="cxd-Form-item cxd-Form-item--normal"
                  data-role="form-item"
                >
                  <label
                    class="cxd-Form-label"
                  >
                    <span>
                      <span
                        class="cxd-TplField"
                      >
                        <span>
                          级联选择
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="cxd-TransferControl cxd-Form-control"
                  >
                    <div
                      class="cxd-Transfer"
                    >
                      <div
                        class="cxd-Transfer-select"
                      >
                        <div
                          class="cxd-Transfer-title"
                        >
                          <span>
                            可选项
                            <span>
                              （
                              6
                              /
                              6
                              ）
                            </span>
                          </span>
                          <a
                            class="cxd-Transfer-checkAll"
                          >
                            全选
                          </a>
                        </div>
                        <div
                          class="cxd-Transfer-search"
                        >
                          <div
                            class="cxd-InputBox"
                          >
                            <input
                              placeholder="请输入关键字"
                              size="12"
                              theme="cxd"
                              type="text"
                              value=""
                            />
                            <icon-mock
                              classname="icon icon-search"
                              icon="search"
                            />
                          </div>
                        </div>
                        <div
                          class="cxd-ChainedSelection cxd-Transfer-selection"
                        >
                          <div
                            class="cxd-ChainedSelection-col"
                          >
                            <div
                              class="cxd-ChainedSelection-item"
                            >
                              <div
                                class="cxd-ChainedSelection-itemLabel"
                              >
                                <span>
                                  法师
                                </span>
                              </div>
                            </div>
                            <div
                              class="cxd-ChainedSelection-item"
                            >
                              <div
                                class="cxd-ChainedSelection-itemLabel"
                              >
                                <span>
                                  战士
                                </span>
                              </div>
                            </div>
                            <div
                              class="cxd-ChainedSelection-item"
                            >
                              <div
                                class="cxd-ChainedSelection-itemLabel"
                              >
                                <span>
                                  打野
                                </span>
                              </div>
                            </div>
                          </div>
                          <div
                            class="cxd-ChainedSelection-col"
                          >
                            <div
                              class="cxd-ChainedSelection-placeholder"
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="cxd-Transfer-mid"
                      />
                      <div
                        class="cxd-Transfer-result"
                      >
                        <div
                          class="cxd-Transfer-title"
                        >
                          <span>
                            已选项
                            <span>
                              （
                              0
                              ）
                            </span>
                          </span>
                          <a
                            class="cxd-Transfer-clearAll is-disabled"
                          >
                            清空
                          </a>
                        </div>
                        <div
                          class="cxd-Selections cxd-Transfer-value"
                        >
                          <div
                            class="cxd-Selections-placeholder"
                          >
                            请选择左侧数据
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="cxd-Panel-footerWrap"
            >
              <div
                class="cxd-Panel-btnToolbar cxd-Panel-footer"
              >
                <button
                  class="cxd-Button cxd-Button--primary cxd-Button--size-default"
                  type="submit"
                >
                  <span>
                    提交
                  </span>
                </button>
              </div>
            </div>
            <div
              class="resize-sensor"
              style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              
  
              <div
                class="resize-sensor-expand"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-shrink"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-appear"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:transfer left tree 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
        >
          <div
            class="cxd-Panel cxd-Panel--default cxd-Panel--form"
            style="position: relative;"
          >
            <div
              class="cxd-Panel-heading"
            >
              <h3
                class="cxd-Panel-title"
              >
                <span
                  class="cxd-TplField"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="cxd-Panel-body"
            >
              <form
                class="cxd-Form cxd-Form--normal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="cxd-Form-item cxd-Form-item--normal"
                  data-role="form-item"
                >
                  <label
                    class="cxd-Form-label"
                  >
                    <span>
                      <span
                        class="cxd-TplField"
                      >
                        <span>
                          关联选择模式
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="cxd-TransferControl cxd-Form-control"
                  >
                    <div
                      class="cxd-Transfer"
                    >
                      <div
                        class="cxd-Transfer-select"
                      >
                        <div
                          class="cxd-Transfer-title"
                        >
                          <span>
                            可选项
                            <span>
                              （
                              5
                              /
                              5
                              ）
                            </span>
                          </span>
                          <a
                            class="cxd-Transfer-checkAll"
                          >
                            全选
                          </a>
                        </div>
                        <div
                          class="cxd-Transfer-search"
                        >
                          <div
                            class="cxd-InputBox"
                          >
                            <input
                              placeholder="请输入关键字"
                              size="12"
                              theme="cxd"
                              type="text"
                              value=""
                            />
                            <icon-mock
                              classname="icon icon-search"
                              icon="search"
                            />
                          </div>
                        </div>
                        <div
                          class="cxd-AssociatedSelection cxd-Transfer-selection"
                        >
                          <div
                            class="cxd-AssociatedSelection-left"
                          >
                            <div
                              class="cxd-Tree "
                            >
                              <ul
                                class="cxd-Tree-list"
                              >
                                <li
                                  class="cxd-Tree-item "
                                >
                                  <div
                                    class="cxd-Tree-itemLabel"
                                  >
                                    <div
                                      class="cxd-Tree-itemArrow"
                                    >
                                      <icon-mock
                                        classname="icon icon-down-arrow-bold"
                                        icon="down-arrow-bold"
                                      />
                                    </div>
                                    <div
                                      class="cxd-Tree-itemLabel-item"
                                    >
                                      <i
                                        class="cxd-Tree-itemIcon cxd-Tree-folderIcon"
                                      >
                                        <icon-mock
                                          classname="icon icon-folder"
                                          icon="folder"
                                        />
                                      </i>
                                      <span
                                        class="cxd-Tree-itemText"
                                        title="法师"
                                      >
                                        法师
                                      </span>
                                      <div
                                        class="cxd-Tree-item-icons"
                                      />
                                    </div>
                                  </div>
                                  <ul
                                    class="cxd-Tree-sublist"
                                  >
                                    <li
                                      class="cxd-Tree-item  cxd-Tree-item--isLeaf"
                                    >
                                      <div
                                        class="cxd-Tree-itemLabel"
                                      >
                                        <span
                                          class="cxd-Tree-itemArrowPlaceholder"
                                        />
                                        <div
                                          class="cxd-Tree-itemLabel-item"
                                        >
                                          <i
                                            class="cxd-Tree-itemIcon cxd-Tree-leafIcon"
                                          >
                                            <icon-mock
                                              classname="icon icon-file"
                                              icon="file"
                                            />
                                          </i>
                                          <span
                                            class="cxd-Tree-itemText"
                                            title="诸葛亮"
                                          >
                                            诸葛亮
                                          </span>
                                          <div
                                            class="cxd-Tree-item-icons"
                                          />
                                        </div>
                                      </div>
                                    </li>
                                  </ul>
                                </li>
                                <li
                                  class="cxd-Tree-item "
                                >
                                  <div
                                    class="cxd-Tree-itemLabel"
                                  >
                                    <div
                                      class="cxd-Tree-itemArrow"
                                    >
                                      <icon-mock
                                        classname="icon icon-down-arrow-bold"
                                        icon="down-arrow-bold"
                                      />
                                    </div>
                                    <div
                                      class="cxd-Tree-itemLabel-item"
                                    >
                                      <i
                                        class="cxd-Tree-itemIcon cxd-Tree-folderIcon"
                                      >
                                        <icon-mock
                                          classname="icon icon-folder"
                                          icon="folder"
                                        />
                                      </i>
                                      <span
                                        class="cxd-Tree-itemText"
                                        title="战士"
                                      >
                                        战士
                                      </span>
                                      <div
                                        class="cxd-Tree-item-icons"
                                      />
                                    </div>
                                  </div>
                                  <ul
                                    class="cxd-Tree-sublist"
                                  >
                                    <li
                                      class="cxd-Tree-item  cxd-Tree-item--isLeaf"
                                    >
                                      <div
                                        class="cxd-Tree-itemLabel"
                                      >
                                        <span
                                          class="cxd-Tree-itemArrowPlaceholder"
                                        />
                                        <div
                                          class="cxd-Tree-itemLabel-item"
                                        >
                                          <i
                                            class="cxd-Tree-itemIcon cxd-Tree-leafIcon"
                                          >
                                            <icon-mock
                                              classname="icon icon-file"
                                              icon="file"
                                            />
                                          </i>
                                          <span
                                            class="cxd-Tree-itemText"
                                            title="曹操"
                                          >
                                            曹操
                                          </span>
                                          <div
                                            class="cxd-Tree-item-icons"
                                          />
                                        </div>
                                      </div>
                                    </li>
                                    <li
                                      class="cxd-Tree-item  cxd-Tree-item--isLeaf"
                                    >
                                      <div
                                        class="cxd-Tree-itemLabel"
                                      >
                                        <span
                                          class="cxd-Tree-itemArrowPlaceholder"
                                        />
                                        <div
                                          class="cxd-Tree-itemLabel-item"
                                        >
                                          <i
                                            class="cxd-Tree-itemIcon cxd-Tree-leafIcon"
                                          >
                                            <icon-mock
                                              classname="icon icon-file"
                                              icon="file"
                                            />
                                          </i>
                                          <span
                                            class="cxd-Tree-itemText"
                                            title="钟无艳"
                                          >
                                            钟无艳
                                          </span>
                                          <div
                                            class="cxd-Tree-item-icons"
                                          />
                                        </div>
                                      </div>
                                    </li>
                                  </ul>
                                </li>
                                <li
                                  class="cxd-Tree-item "
                                >
                                  <div
                                    class="cxd-Tree-itemLabel"
                                  >
                                    <div
                                      class="cxd-Tree-itemArrow"
                                    >
                                      <icon-mock
                                        classname="icon icon-down-arrow-bold"
                                        icon="down-arrow-bold"
                                      />
                                    </div>
                                    <div
                                      class="cxd-Tree-itemLabel-item"
                                    >
                                      <i
                                        class="cxd-Tree-itemIcon cxd-Tree-folderIcon"
                                      >
                                        <icon-mock
                                          classname="icon icon-folder"
                                          icon="folder"
                                        />
                                      </i>
                                      <span
                                        class="cxd-Tree-itemText"
                                        title="打野"
                                      >
                                        打野
                                      </span>
                                      <div
                                        class="cxd-Tree-item-icons"
                                      />
                                    </div>
                                  </div>
                                  <ul
                                    class="cxd-Tree-sublist"
                                  >
                                    <li
                                      class="cxd-Tree-item  cxd-Tree-item--isLeaf"
                                    >
                                      <div
                                        class="cxd-Tree-itemLabel"
                                      >
                                        <span
                                          class="cxd-Tree-itemArrowPlaceholder"
                                        />
                                        <div
                                          class="cxd-Tree-itemLabel-item"
                                        >
                                          <i
                                            class="cxd-Tree-itemIcon cxd-Tree-leafIcon"
                                          >
                                            <icon-mock
                                              classname="icon icon-file"
                                              icon="file"
                                            />
                                          </i>
                                          <span
                                            class="cxd-Tree-itemText"
                                            title="李白"
                                          >
                                            李白
                                          </span>
                                          <div
                                            class="cxd-Tree-item-icons"
                                          />
                                        </div>
                                      </div>
                                    </li>
                                    <li
                                      class="cxd-Tree-item  cxd-Tree-item--isLeaf"
                                    >
                                      <div
                                        class="cxd-Tree-itemLabel"
                                      >
                                        <span
                                          class="cxd-Tree-itemArrowPlaceholder"
                                        />
                                        <div
                                          class="cxd-Tree-itemLabel-item"
                                        >
                                          <i
                                            class="cxd-Tree-itemIcon cxd-Tree-leafIcon"
                                          >
                                            <icon-mock
                                              classname="icon icon-file"
                                              icon="file"
                                            />
                                          </i>
                                          <span
                                            class="cxd-Tree-itemText"
                                            title="韩信"
                                          >
                                            韩信
                                          </span>
                                          <div
                                            class="cxd-Tree-item-icons"
                                          />
                                        </div>
                                      </div>
                                    </li>
                                    <li
                                      class="cxd-Tree-item  cxd-Tree-item--isLeaf"
                                    >
                                      <div
                                        class="cxd-Tree-itemLabel"
                                      >
                                        <span
                                          class="cxd-Tree-itemArrowPlaceholder"
                                        />
                                        <div
                                          class="cxd-Tree-itemLabel-item"
                                        >
                                          <i
                                            class="cxd-Tree-itemIcon cxd-Tree-leafIcon"
                                          >
                                            <icon-mock
                                              classname="icon icon-file"
                                              icon="file"
                                            />
                                          </i>
                                          <span
                                            class="cxd-Tree-itemText"
                                            title="云中君"
                                          >
                                            云中君
                                          </span>
                                          <div
                                            class="cxd-Tree-item-icons"
                                          />
                                        </div>
                                      </div>
                                    </li>
                                  </ul>
                                </li>
                              </ul>
                            </div>
                          </div>
                          <div
                            class="cxd-AssociatedSelection-right"
                          >
                            <div
                              class="cxd-AssociatedSelection-box"
                            >
                              请选择左侧数据
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="cxd-Transfer-mid"
                      />
                      <div
                        class="cxd-Transfer-result"
                      >
                        <div
                          class="cxd-Transfer-title"
                        >
                          <span>
                            已选项
                            <span>
                              （
                              0
                              ）
                            </span>
                          </span>
                          <a
                            class="cxd-Transfer-clearAll is-disabled"
                          >
                            清空
                          </a>
                        </div>
                        <div
                          class="cxd-Selections cxd-Transfer-value"
                        >
                          <div
                            class="cxd-Selections-placeholder"
                          >
                            请选择左侧数据
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="cxd-Panel-footerWrap"
            >
              <div
                class="cxd-Panel-btnToolbar cxd-Panel-footer"
              >
                <button
                  class="cxd-Button cxd-Button--primary cxd-Button--size-default"
                  type="submit"
                >
                  <span>
                    提交
                  </span>
                </button>
              </div>
            </div>
            <div
              class="resize-sensor"
              style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              
  
              <div
                class="resize-sensor-expand"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-shrink"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-appear"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:transfer table 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
        >
          <div
            class="cxd-Panel cxd-Panel--default cxd-Panel--form"
            style="position: relative;"
          >
            <div
              class="cxd-Panel-heading"
            >
              <h3
                class="cxd-Panel-title"
              >
                <span
                  class="cxd-TplField"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="cxd-Panel-body"
            >
              <form
                class="cxd-Form cxd-Form--normal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="cxd-Form-item cxd-Form-item--normal"
                  data-role="form-item"
                >
                  <label
                    class="cxd-Form-label"
                  >
                    <span>
                      <span
                        class="cxd-TplField"
                      >
                        <span>
                          表格形式
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="cxd-TransferControl cxd-Form-control"
                  >
                    <div
                      class="cxd-Transfer"
                    >
                      <div
                        class="cxd-Transfer-select"
                      >
                        <div
                          class="cxd-Transfer-title cxd-Transfer-title--light"
                        >
                          <span>
                            可选项
                            <span>
                              （
                              6
                              /
                              6
                              ）
                            </span>
                          </span>
                        </div>
                        <div
                          class="cxd-TableSelection cxd-Transfer-selection"
                        >
                          <div
                            class="cxd-Table-content"
                          >
                            <table
                              class="cxd-Table-table"
                            >
                              <thead>
                                <tr>
                                  <th
                                    class="cxd-Table-checkCell"
                                  >
                                    <label
                                      class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full cxd-Checkbox--sm"
                                    >
                                      <input
                                        type="checkbox"
                                      />
                                      <i />
                                      <span
                                        class=""
                                      />
                                    </label>
                                  </th>
                                  <th>
                                    英雄
                                  </th>
                                  <th>
                                    位置
                                  </th>
                                </tr>
                              </thead>
                              <tbody>
                                <tr
                                  class=""
                                >
                                  <td
                                    class="cxd-Table-checkCell"
                                  >
                                    <label
                                      class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full cxd-Checkbox--sm"
                                    >
                                      <input
                                        type="checkbox"
                                      />
                                      <i />
                                      <span
                                        class=""
                                      />
                                    </label>
                                  </td>
                                  <td>
                                    <span
                                      class="cxd-PlainField"
                                    >
                                      诸葛亮
                                    </span>
                                  </td>
                                  <td>
                                    <span
                                      class="cxd-PlainField"
                                    >
                                      中单
                                    </span>
                                  </td>
                                </tr>
                                <tr
                                  class=""
                                >
                                  <td
                                    class="cxd-Table-checkCell"
                                  >
                                    <label
                                      class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full cxd-Checkbox--sm"
                                    >
                                      <input
                                        type="checkbox"
                                      />
                                      <i />
                                      <span
                                        class=""
                                      />
                                    </label>
                                  </td>
                                  <td>
                                    <span
                                      class="cxd-PlainField"
                                    >
                                      曹操
                                    </span>
                                  </td>
                                  <td>
                                    <span
                                      class="cxd-PlainField"
                                    >
                                      上单
                                    </span>
                                  </td>
                                </tr>
                                <tr
                                  class=""
                                >
                                  <td
                                    class="cxd-Table-checkCell"
                                  >
                                    <label
                                      class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full cxd-Checkbox--sm"
                                    >
                                      <input
                                        type="checkbox"
                                      />
                                      <i />
                                      <span
                                        class=""
                                      />
                                    </label>
                                  </td>
                                  <td>
                                    <span
                                      class="cxd-PlainField"
                                    >
                                      钟无艳
                                    </span>
                                  </td>
                                  <td>
                                    <span
                                      class="cxd-PlainField"
                                    >
                                      上单
                                    </span>
                                  </td>
                                </tr>
                                <tr
                                  class=""
                                >
                                  <td
                                    class="cxd-Table-checkCell"
                                  >
                                    <label
                                      class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full cxd-Checkbox--sm"
                                    >
                                      <input
                                        type="checkbox"
                                      />
                                      <i />
                                      <span
                                        class=""
                                      />
                                    </label>
                                  </td>
                                  <td>
                                    <span
                                      class="cxd-PlainField"
                                    >
                                      李白
                                    </span>
                                  </td>
                                  <td>
                                    <span
                                      class="cxd-PlainField"
                                    >
                                      打野
                                    </span>
                                  </td>
                                </tr>
                                <tr
                                  class=""
                                >
                                  <td
                                    class="cxd-Table-checkCell"
                                  >
                                    <label
                                      class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full cxd-Checkbox--sm"
                                    >
                                      <input
                                        type="checkbox"
                                      />
                                      <i />
                                      <span
                                        class=""
                                      />
                                    </label>
                                  </td>
                                  <td>
                                    <span
                                      class="cxd-PlainField"
                                    >
                                      韩信
                                    </span>
                                  </td>
                                  <td>
                                    <span
                                      class="cxd-PlainField"
                                    >
                                      打野
                                    </span>
                                  </td>
                                </tr>
                                <tr
                                  class=""
                                >
                                  <td
                                    class="cxd-Table-checkCell"
                                  >
                                    <label
                                      class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full cxd-Checkbox--sm"
                                    >
                                      <input
                                        type="checkbox"
                                      />
                                      <i />
                                      <span
                                        class=""
                                      />
                                    </label>
                                  </td>
                                  <td>
                                    <span
                                      class="cxd-PlainField"
                                    >
                                      云中君
                                    </span>
                                  </td>
                                  <td>
                                    <span
                                      class="cxd-PlainField"
                                    >
                                      打野
                                    </span>
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                          </div>
                        </div>
                      </div>
                      <div
                        class="cxd-Transfer-mid"
                      />
                      <div
                        class="cxd-Transfer-result"
                      >
                        <div
                          class="cxd-Transfer-title cxd-Transfer-title--light"
                        >
                          <span>
                            已选项
                            <span>
                              （
                              0
                              ）
                            </span>
                          </span>
                          <a
                            class="cxd-Transfer-clearAll is-disabled"
                          >
                            清空
                          </a>
                        </div>
                        <div
                          class="cxd-Selections cxd-Transfer-value"
                        >
                          <div
                            class="cxd-Selections-placeholder"
                          >
                            请选择左侧数据
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="cxd-Panel-footerWrap"
            >
              <div
                class="cxd-Panel-btnToolbar cxd-Panel-footer"
              >
                <button
                  class="cxd-Button cxd-Button--primary cxd-Button--size-default"
                  type="submit"
                >
                  <span>
                    提交
                  </span>
                </button>
              </div>
            </div>
            <div
              class="resize-sensor"
              style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              
  
              <div
                class="resize-sensor-expand"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-shrink"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-appear"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:transfer tree 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
        >
          <div
            class="cxd-Panel cxd-Panel--default cxd-Panel--form"
            style="position: relative;"
          >
            <div
              class="cxd-Panel-heading"
            >
              <h3
                class="cxd-Panel-title"
              >
                <span
                  class="cxd-TplField"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="cxd-Panel-body"
            >
              <form
                class="cxd-Form cxd-Form--normal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="cxd-Form-item cxd-Form-item--normal"
                  data-role="form-item"
                >
                  <label
                    class="cxd-Form-label"
                  >
                    <span>
                      <span
                        class="cxd-TplField"
                      >
                        <span>
                          树型展示
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="cxd-TransferControl cxd-Form-control"
                  >
                    <div
                      class="cxd-Transfer"
                    >
                      <div
                        class="cxd-Transfer-select"
                      >
                        <div
                          class="cxd-Transfer-title"
                        >
                          <span>
                            <label
                              class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full cxd-Checkbox--sm"
                            >
                              <input
                                type="checkbox"
                              />
                              <i />
                              <span
                                class=""
                              />
                            </label>
                            可选项
                            <span>
                              （
                              6
                              /
                              6
                              ）
                            </span>
                          </span>
                        </div>
                        <div
                          class="cxd-Tree cxd-Transfer-selection"
                        >
                          <ul
                            class="cxd-Tree-list"
                          >
                            <li
                              class="cxd-Tree-item "
                            >
                              <div
                                class="cxd-Tree-itemLabel"
                              >
                                <div
                                  class="cxd-Tree-itemArrow"
                                >
                                  <icon-mock
                                    classname="icon icon-down-arrow-bold"
                                    icon="down-arrow-bold"
                                  />
                                </div>
                                <label
                                  class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--sm"
                                >
                                  <input
                                    type="checkbox"
                                  />
                                  <i />
                                  <span
                                    class=""
                                  />
                                </label>
                                <div
                                  class="cxd-Tree-itemLabel-item"
                                >
                                  <span
                                    class="cxd-Tree-itemText"
                                    title="法师"
                                  >
                                    <span>
                                      法师
                                    </span>
                                  </span>
                                  <div
                                    class="cxd-Tree-item-icons"
                                  />
                                </div>
                              </div>
                              <ul
                                class="cxd-Tree-sublist"
                              >
                                <li
                                  class="cxd-Tree-item  cxd-Tree-item--isLeaf"
                                >
                                  <div
                                    class="cxd-Tree-itemLabel"
                                  >
                                    <span
                                      class="cxd-Tree-itemArrowPlaceholder"
                                    />
                                    <label
                                      class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--sm"
                                    >
                                      <input
                                        type="checkbox"
                                      />
                                      <i />
                                      <span
                                        class=""
                                      />
                                    </label>
                                    <div
                                      class="cxd-Tree-itemLabel-item"
                                    >
                                      <span
                                        class="cxd-Tree-itemText"
                                        title="诸葛亮"
                                      >
                                        <span>
                                          诸葛亮
                                        </span>
                                      </span>
                                      <div
                                        class="cxd-Tree-item-icons"
                                      />
                                    </div>
                                  </div>
                                </li>
                              </ul>
                            </li>
                            <li
                              class="cxd-Tree-item "
                            >
                              <div
                                class="cxd-Tree-itemLabel"
                              >
                                <div
                                  class="cxd-Tree-itemArrow"
                                >
                                  <icon-mock
                                    classname="icon icon-down-arrow-bold"
                                    icon="down-arrow-bold"
                                  />
                                </div>
                                <label
                                  class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--sm"
                                >
                                  <input
                                    type="checkbox"
                                  />
                                  <i />
                                  <span
                                    class=""
                                  />
                                </label>
                                <div
                                  class="cxd-Tree-itemLabel-item"
                                >
                                  <span
                                    class="cxd-Tree-itemText"
                                    title="战士"
                                  >
                                    <span>
                                      战士
                                    </span>
                                  </span>
                                  <div
                                    class="cxd-Tree-item-icons"
                                  />
                                </div>
                              </div>
                              <ul
                                class="cxd-Tree-sublist"
                              >
                                <li
                                  class="cxd-Tree-item  cxd-Tree-item--isLeaf"
                                >
                                  <div
                                    class="cxd-Tree-itemLabel"
                                  >
                                    <span
                                      class="cxd-Tree-itemArrowPlaceholder"
                                    />
                                    <label
                                      class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--sm"
                                    >
                                      <input
                                        type="checkbox"
                                      />
                                      <i />
                                      <span
                                        class=""
                                      />
                                    </label>
                                    <div
                                      class="cxd-Tree-itemLabel-item"
                                    >
                                      <span
                                        class="cxd-Tree-itemText"
                                        title="曹操"
                                      >
                                        <span>
                                          曹操
                                        </span>
                                      </span>
                                      <div
                                        class="cxd-Tree-item-icons"
                                      />
                                    </div>
                                  </div>
                                </li>
                                <li
                                  class="cxd-Tree-item  cxd-Tree-item--isLeaf"
                                >
                                  <div
                                    class="cxd-Tree-itemLabel"
                                  >
                                    <span
                                      class="cxd-Tree-itemArrowPlaceholder"
                                    />
                                    <label
                                      class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--sm"
                                    >
                                      <input
                                        type="checkbox"
                                      />
                                      <i />
                                      <span
                                        class=""
                                      />
                                    </label>
                                    <div
                                      class="cxd-Tree-itemLabel-item"
                                    >
                                      <span
                                        class="cxd-Tree-itemText"
                                        title="钟无艳"
                                      >
                                        <span>
                                          钟无艳
                                        </span>
                                      </span>
                                      <div
                                        class="cxd-Tree-item-icons"
                                      />
                                    </div>
                                  </div>
                                </li>
                              </ul>
                            </li>
                            <li
                              class="cxd-Tree-item "
                            >
                              <div
                                class="cxd-Tree-itemLabel"
                              >
                                <div
                                  class="cxd-Tree-itemArrow"
                                >
                                  <icon-mock
                                    classname="icon icon-down-arrow-bold"
                                    icon="down-arrow-bold"
                                  />
                                </div>
                                <label
                                  class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--sm"
                                >
                                  <input
                                    type="checkbox"
                                  />
                                  <i />
                                  <span
                                    class=""
                                  />
                                </label>
                                <div
                                  class="cxd-Tree-itemLabel-item"
                                >
                                  <span
                                    class="cxd-Tree-itemText"
                                    title="打野"
                                  >
                                    <span>
                                      打野
                                    </span>
                                  </span>
                                  <div
                                    class="cxd-Tree-item-icons"
                                  />
                                </div>
                              </div>
                              <ul
                                class="cxd-Tree-sublist"
                              >
                                <li
                                  class="cxd-Tree-item  cxd-Tree-item--isLeaf"
                                >
                                  <div
                                    class="cxd-Tree-itemLabel"
                                  >
                                    <span
                                      class="cxd-Tree-itemArrowPlaceholder"
                                    />
                                    <label
                                      class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--sm"
                                    >
                                      <input
                                        type="checkbox"
                                      />
                                      <i />
                                      <span
                                        class=""
                                      />
                                    </label>
                                    <div
                                      class="cxd-Tree-itemLabel-item"
                                    >
                                      <span
                                        class="cxd-Tree-itemText"
                                        title="李白"
                                      >
                                        <span>
                                          李白
                                        </span>
                                      </span>
                                      <div
                                        class="cxd-Tree-item-icons"
                                      />
                                    </div>
                                  </div>
                                </li>
                                <li
                                  class="cxd-Tree-item  cxd-Tree-item--isLeaf"
                                >
                                  <div
                                    class="cxd-Tree-itemLabel"
                                  >
                                    <span
                                      class="cxd-Tree-itemArrowPlaceholder"
                                    />
                                    <label
                                      class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--sm"
                                    >
                                      <input
                                        type="checkbox"
                                      />
                                      <i />
                                      <span
                                        class=""
                                      />
                                    </label>
                                    <div
                                      class="cxd-Tree-itemLabel-item"
                                    >
                                      <span
                                        class="cxd-Tree-itemText"
                                        title="韩信"
                                      >
                                        <span>
                                          韩信
                                        </span>
                                      </span>
                                      <div
                                        class="cxd-Tree-item-icons"
                                      />
                                    </div>
                                  </div>
                                </li>
                                <li
                                  class="cxd-Tree-item  cxd-Tree-item--isLeaf"
                                >
                                  <div
                                    class="cxd-Tree-itemLabel"
                                  >
                                    <span
                                      class="cxd-Tree-itemArrowPlaceholder"
                                    />
                                    <label
                                      class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--sm"
                                    >
                                      <input
                                        type="checkbox"
                                      />
                                      <i />
                                      <span
                                        class=""
                                      />
                                    </label>
                                    <div
                                      class="cxd-Tree-itemLabel-item"
                                    >
                                      <span
                                        class="cxd-Tree-itemText"
                                        title="云中君"
                                      >
                                        <span>
                                          云中君
                                        </span>
                                      </span>
                                      <div
                                        class="cxd-Tree-item-icons"
                                      />
                                    </div>
                                  </div>
                                </li>
                              </ul>
                            </li>
                          </ul>
                        </div>
                      </div>
                      <div
                        class="cxd-Transfer-mid"
                      />
                      <div
                        class="cxd-Transfer-result"
                      >
                        <div
                          class="cxd-Transfer-title"
                        >
                          <span>
                            已选项
                            <span>
                              （
                              0
                              ）
                            </span>
                          </span>
                          <a
                            class="cxd-Transfer-clearAll is-disabled"
                          >
                            清空
                          </a>
                        </div>
                        <div
                          class="cxd-Selections cxd-Transfer-value"
                        >
                          <div
                            class="cxd-Selections-placeholder"
                          >
                            请选择左侧数据
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="cxd-Panel-footerWrap"
            >
              <div
                class="cxd-Panel-btnToolbar cxd-Panel-footer"
              >
                <button
                  class="cxd-Button cxd-Button--primary cxd-Button--size-default"
                  type="submit"
                >
                  <span>
                    提交
                  </span>
                </button>
              </div>
            </div>
            <div
              class="resize-sensor"
              style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              
  
              <div
                class="resize-sensor-expand"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-shrink"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-appear"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
